third release (AngularJS without services)

--- a/SWE 2/AngularJs/WebContent/CSS/styleHome.css
+++ b/SWE 2/AngularJs/WebContent/CSS/styleHome.css
@@ -9,3 +9,15 @@
     background: #eee;
     position: absolute;
 }
+#mcqChoices{
+	display:none;
+}
+#gameForm{
+	display:none;
+}
+#questionForm{
+	display:none;
+}
+#choices{
+	display:none;
+}
