--- a/SWE 2/AngularJs/WebContent/CSS/styleSingUp.css
+++ b/SWE 2/AngularJs/WebContent/CSS/styleSingUp.css
@@ -1,6 +1,3 @@
-#signIn {
-  cursor:pointer;
-}
 body{
     background: #eee;
 }
@@ -15,6 +12,7 @@ body{
     text-align: center;
     padding: 5% 0;
     background: #eee;
+    cursor:pointer;
 }
 #signUp{
     text-align: center;
@@ -49,6 +47,7 @@ form{
 }
 #SignUp{
     margin: 3% 0%;
+    background : #02b3e4;
 }
 hr{
     margin: 3% auto;
