--- a/Phase 3/AngularJs/WebContent/CSS/styleGames.css
+++ b/Phase 3/AngularJs/WebContent/CSS/styleGames.css
@@ -1,5 +1,5 @@
 .thumbnail{
-    width:40%;
+    width:60%;
     height:60%;
 }
 .thumbnail .caption{
@@ -20,4 +20,66 @@ body{
 #time{
 	float:right;
 	color : #82B1FF;
+}
+
+
+
+
+
+.smallMenu {
+    width: 20px;
+    height: 3px;
+    background-color: black;
+    margin: 4px 0;
+}
+
+.dropbtn {
+    border: none;
+    cursor: pointer;
+    
+}
+
+.dropdown {
+    display: inline-block;
+    position:absolute;
+	top:1%;
+	margin-left:1%;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 16px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown a:hover {background-color: #f1f1f1}
+
+.show {display:block;}
+
+#errorCopy{
+	display:none;
+	color :red;
+}
+#newCourseName{
+	text-align:center;
+	border:none;
+	width:40%;
+	border-bottom: 2px solid #82B1FF;
+}
+#newGameName{
+	text-align:center;
+	width:40%;
+	border:none;
+	border-bottom: 2px solid #82B1FF;
 }
