--- a/Phase 3/AngularJs/WebContent/CSS/styleGames.css
+++ b/Phase 3/AngularJs/WebContent/CSS/styleGames.css
@@ -86,3 +86,38 @@ body{
 #Menu{
 	display:none;
 }
+#time2{
+	width:7%;
+	text-align:center;
+}
+#Qstatement2{
+	width:90%;
+	border: none;
+	border-bottom: 2px solid #82B1FF;
+}
+#mcq12{
+	border: none;
+	border-bottom: 2px solid #82B1FF;
+}
+#mcq22{
+	border: none;
+	border-bottom: 2px solid #82B1FF;
+}
+#mcq32{
+	display :none;
+	border: none;
+	border-bottom: 2px solid #82B1FF;
+}
+#mcq42{
+	display :none;
+	border: none;
+	border-bottom: 2px solid #82B1FF;
+}
+#answer2{
+	border: none;
+	border-bottom: 2px solid #82B1FF;
+}
+#invalidAnswer2{
+	display : none;
+	color:red;
+}
