--- a/Phase 3/AngularJs/WebContent/CSS/styleHome.css
+++ b/Phase 3/AngularJs/WebContent/CSS/styleHome.css
@@ -58,10 +58,12 @@
 	border-bottom: 2px solid #82B1FF;
 }
 #mcq3{
+	display :none;
 	border: none;
 	border-bottom: 2px solid #82B1FF;
 }
 #mcq4{
+	display :none;
 	border: none;
 	border-bottom: 2px solid #82B1FF;
 }
