--- a/Phase 3/AngularJs/WebContent/CSS/styleGames.css
+++ b/Phase 3/AngularJs/WebContent/CSS/styleGames.css
@@ -121,3 +121,13 @@ body{
 	display : none;
 	color:red;
 }
+#invalidGameName2{
+	display : none;
+	color:red;
+}
+#gameName2{
+	width:40%;
+	text-align:center;
+	border: none;
+	border-bottom: 2px solid #82B1FF;
+}
