--- a/Phase 3/AngularJs/WebContent/CSS/styleGames.css
+++ b/Phase 3/AngularJs/WebContent/CSS/styleGames.css
@@ -131,3 +131,19 @@ body{
 	border: none;
 	border-bottom: 2px solid #82B1FF;
 }
+.modal-body{
+   
+    overflow-y: auto;
+}
+hr{
+    width:50%;
+    border: 1px solid #82B1FF;
+}
+.undo{
+	float :right;
+}
+#collName{
+	text-align:center;
+	border: none;
+	border-bottom: 2px solid #82B1FF;
+}
