--- a/Phase 3/AngularJs/WebContent/CSS/styleGames.css
+++ b/Phase 3/AngularJs/WebContent/CSS/styleGames.css
@@ -14,6 +14,181 @@
     height:100%;
     border-radius: 20%;
 }
+body {
+    font-family: 'Open Sans', sans-serif;
+    line-height: 30px;
+    font-size: 14px;
+
+}
+.set-pad {
+    padding-top:35px;
+}
+.set-row-pad {
+    padding-top:30px;
+    padding-bottom:50px;
+}
+/*=====================================
+  NAVBAR STYLES 
+    ===================================*/
+
+.logo-custom {
+    max-height: 40px;
+}
+
+#menu {
+    background-color: #546E7A;
+    color: #fff;
+    font-size: 12px;
+    font-weight: 900;
+    letter-spacing: 1px;
+    min-height: 70px;
+}
+.navbar-inverse {
+    border-color: transparent;
+}
+.navbar-inverse .navbar-nav > li > a, .navbar-inverse .navbar-nav > li > a:hover {
+    color: #FFF;
+    padding: 22px 10px;
+}
+.navbar li a > span .border {
+  display: block;
+  height: 3px;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  position: relative;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s; }
+
+
+.navbar li a > span .border:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #1A94C4;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transform-origin: 0 50%;
+  transform-origin: 0 50%;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out; }
+
+
+.navbar li a:hover > span .border:before, .navbar li a:focus > span .border:before {
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
+.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus{
+  background: transparent; }
+.navbar li.active a > span .border {
+  background: #1A94C4; }
+
+/*=====================================
+  HEADER LINE STYLES 
+    ===================================*/
+.header-line {
+    font-weight: 900;
+    font-size: 25px;
+    padding-bottom: 5px;
+    padding-top: 25px;
+    color: #000;
+}
+
+h1::after {
+    content: " ";
+    border: solid 2px #1A94C4;
+    display: block;
+    width: 200px;
+    margin: 12px auto;
+}
+
+.btn-default{
+    font-weight: bold;
+}
+.btn-default:hover{
+    background: #546E7A;
+    color:#fff;
+}
+#logo{
+    border-radius: 38%;
+}
+.navbar-inverse .navbar-brand{
+    color:#fff;
+}
+/*=====================================
+  CONTACT STYLES 
+  ===================================*/
+#contact-sec {
+    padding-top: 10px;
+    padding-bottom: 60px;
+    background: url(..//contact.jpg) no-repeat center center;
+    padding: 0;
+    -webkit-background-size: cover;
+    background-size: cover;
+    color: #fff;
+    background-attachment: fixed;
+}
+
+#contact-sec .overlay {
+        background: rgba(0, 0, 0, 0.76);
+        min-height: 600px;
+    }
+
+    #contact-sec h1 {
+        color:#fff;
+    }
+#contact-sec .form-control{
+    background-color:rgba(255, 255, 255, 0);
+    color:#fff;
+}
+#contactButton{
+    border: none;
+}
+#subject{
+	text-align : center;
+	border: none;
+	border-bottom: 2px solid #82B1FF;
+}
+#email{
+	text-align : center;
+	border: none;
+	border-bottom: 2px solid #82B1FF;
+}
+#message{
+	border: none;
+	border-bottom: 2px solid #82B1FF;
+}
+/*=====================================
+  Footer STYLES 
+  ===================================*/
+#footer {
+    
+    padding:5px 20px;
+    background-color:#546E7A;
+    color:#fff;
+    font-size:15px;
+}
+------------------------------
+.thumbnail{
+    width:60%;
+    height:60%;
+}
+.thumbnail .caption{
+    padding-top: 0%;
+}
 body{
     overflow-x: hidden;
 }
@@ -150,4 +325,62 @@ hr{
 #notColl{
 	display : none;
 	color:red;
+}
+
+/*=====================================
+  CONTACT STYLES 
+  ===================================*/
+#contact-sec {
+    padding-top: 10px;
+    padding-bottom: 60px;
+    background: url(..//contact.jpg) no-repeat center center;
+    padding: 0;
+    -webkit-background-size: cover;
+    background-size: cover;
+    color: #fff;
+    background-attachment: fixed;
+}
+
+#contact-sec .overlay {
+        background: rgba(0, 0, 0, 0.76);
+        min-height: 600px;
+    }
+
+    #contact-sec h1 {
+        color:#fff;
+    }
+#contact-sec .form-control{
+    background-color:rgba(255, 255, 255, 0);
+    color:#fff;
+}
+
+#contactButton{
+    border: none;
+}
+#subject{
+	text-align : center;
+	border: none;
+	border-bottom: 2px solid #82B1FF;
+}
+#email{
+	text-align : center;
+	border: none;
+	border-bottom: 2px solid #82B1FF;
+}
+#message{
+	border: none;
+	border-bottom: 2px solid #82B1FF;
+}
+#log{
+	display:none;
+}
+
+/*=====================================
+  Footer STYLES 
+  ===================================*/
+#footer {
+    padding:5px 20px;
+    background-color:#546E7A;
+    color:#fff;
+    font-size:15px;
 }
